--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html>
+<!-- ICS2O-Unit1-03-HTML-hello_world -->
+<html lang="en-ca">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    <meta name="description" content="My first webpage, with proper style">
+    <meta name="keywords" content="mths, ics2o">
+    <meta name="author" content="Venika Sem">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My first webpage, with proper style</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
-    Hello world
-    <script src="script.js"></script>
+  <style>
+    #my-header {
+      background-color: rgb(255, 165, 0);
+      color: hsl(147, 50%, 47%);
+      padding: 40px;
+      text-align: center;
+    }   
+  </style>
+  <body style="background-color: powderblue;">
+    <h1 id="my-header">Style is important</h1>
+    <p style="background-color: #ff00ff;">Proper HTML style is important</p>
+    <img src="./images/HTML-style-guide.jpeg" alt="style">
+    <p>
+      <a href="./cities.html">My cities page</a>
+    </p>
   </body>
 </html>
