--- a/cities.html
+++ b/cities.html
@@ -27,10 +27,10 @@
     </style>
 
     <body style= "background-color: green;">
-      <-- An element with a unique id -->
-      <h1 id="my header">Capital cities</h1>
+      <!-- An element with a unique id -->
+      <h1 id="myHeader">Capital Cities</h1>
 
-      <-- Multiple elements with same class -->
+      <!-- Multiple elements with same class -->
       <h2 class="city">Ottawa</h2>
       <p>Ottawa is the capital of Canada.</p>
       <img src="./images/flag-of-Canada.png" alt="canada">
