--- a/cities.html
+++ b/cities.html
@@ -28,7 +28,7 @@
 
     <body style= "background-color: green;">
       <!-- An element with a unique id -->
-      <h1 id="myHeader">Capital Cities</h1>
+      <h1 id="my-header">Capital Cities</h1>
 
       <!-- Multiple elements with same class -->
       <h2 class="city">Ottawa</h2>
